# trevvos-forge

./: .gitignore  ALPHA.md  README.md  RELEASE_NOTES.md  main.py  pyproject.toml
docs/: advisory-mode.md  alpha-download-install.md  alpha-feedback-triage.md  alpha-known-issues.md  alpha-quickstart.md  alpha-results-template.md  alpha-runbook.md  alpha-safety.md  alpha-success-criteria.md  alpha-test-plan.md  alpha-tester-invite.md  controlled-testing-mode.md  execution-mode.md  feedback-template.md  known-limitations.md  local-api-dashboard.md  providers.md  release-checklist.md  release-v0.1.0-alpha.1.md  safety-model.md  troubleshooting.md
packaging/: README_BINARY_DISTRIBUTION.md  build_linux.sh  build_release.py  build_windows.ps1  trevvos_entry.py
tests/: test_agent_state.py  test_analyze_command.py  test_cli_regression_check.py  test_cli_regression_integration.py  test_commit_workflow.py  test_context_enrichment.py  test_diff_builder_composition.py  test_docs.py  test_doctor.py  test_execution_tracker.py  test_explain_command.py  test_file_change_outputs.py  test_file_changes_prompt.py  test_golden_evals.py  test_language_config.py  test_local_api.py  test_local_dashboard.py  test_openai_compatible_provider.py  test_operation_applier.py  test_operation_error_artifacts.py  test_packaging.py  test_patch_writer.py  test_plan_constraints.py  test_plan_output.py  test_progress_reporter.py  test_project_scanner.py  test_propose_command.py  test_providers.py  test_readme_smoke_diff_builder.py  test_repair_workflow.py  test_retry_budget.py  test_retry_workflow.py  (+20 more)
(+100 files in other folders)
